nav section added

--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Hotline </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    
+
+<body class="">
+
+    <header>
+        <!-- nav section -->
+        <nav>
+            <div class="flex justify-between items-center w-11/12 mx-auto py-6">
+                <div class="flex justify-between items-center gap-x-2">
+                    <img class="w-12 h-12" src="./assets/logo.png" alt="logo">
+                    <h1 class="text-[#006747] font-extrabold">Emergency <br> Service</h1>
+                </div>
+
+                <div class="flex justify-evenly items-center gap-x-5">
+                    <div>
+                        <button class="btn bg-[#41ff6b1a] rounded-[50px]">
+                            <span class="font-black">0</span>
+                            <img class="w-7 h-7" src="./assets/heart.png" alt="love-icon">
+                        </button>
+                    </div>
+                    <div>
+                        <button class="btn bg-[#41ff6b1a] rounded-[50px]">
+                            <span class="font-black">0</span>
+                            <img class="w-7 h-7" src="./assets/coin.png" alt="love-icon">
+                        </button>
+                    </div>
+                    <div>
+                        <button class="btn bg-[#00a63e] px-9 rounded-[50px] text-white font-semibold">
+                            <span class="">0</span>
+                            Copy
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        
+
+    </header>
+
+
+    <main></main>
+
 
 
     <script src="./index.js"></script>
 </body>
+
 </html>
