banner section added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
             </div>
         </nav>
 
-        
+        <!-- banner section -->
+         <div
+            class="bg-gradient-to-r from-[rgba(1.25,49.64,34.61,1)] via-[rgba(0,103,71,1)] to-[rgba(1,50,35,1)] px-14 py-3">
+            <div class="banner">
+                <img class="w-24 h-24" src="./assets/logo-dark.png" alt="logo">
+                <h1 class="font-bold text-4xl text-[#ffffff] my-3">Emergency Service Directory</h1>
+                <p class="font-semibold text-sm text-[#ffffff]">Government Emergency Services at Your Fingertip - A
+                    Project by Government of the People's Republic of Bangladesh</p>
+            </div>
+        </div>
 
     </header>
 
