contacts-grid section added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
 
         <!-- banner section -->
-         <div
+        <div
             class="bg-gradient-to-r from-[rgba(1.25,49.64,34.61,1)] via-[rgba(0,103,71,1)] to-[rgba(1,50,35,1)] px-14 py-3">
             <div class="banner">
                 <img class="w-24 h-24" src="./assets/logo-dark.png" alt="logo">
@@ -55,11 +55,286 @@
                     Project by Government of the People's Republic of Bangladesh</p>
             </div>
         </div>
-
     </header>
 
 
-    <main></main>
+    <main class="bg-[#f5fff6]">
+        <!-- grid section -->
+        <section class="grid-container w-11/12 grid grid-cols-12 mx-auto gap-4">
+            <section class="contacts-grid col-span-9 space-y-4">
+                <div class="contact-card flex gap-4">
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    National Emergency Dial 
+                                </h2>
+                                <p>National Emergency</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    999
+                                </h2>
+                                <button class="btn btn-active rounded-full">All</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#dfefff] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/police.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Police Helpline Number
+                                </h2>
+                                <p>Police</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    999
+                                </h2>
+                                <button class="btn btn-active rounded-full">Police</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/fire-service.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Fire Service Number
+                                </h2>
+                                <p>Fire Service</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    999
+                                </h2>
+                                <button class="btn btn-active rounded-full">Fire</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-card flex gap-4">
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/ambulance.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Ambulance Service
+                                </h2>
+                                <p>Ambulance</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    1994-999999
+                                </h2>
+                                <button class="btn btn-active rounded-full">Health</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Women & Child Helpline
+                                </h2>
+                                <p>Women & Child Helpline</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    109
+                                </h2>
+                                <button class="btn btn-active rounded-full">Help</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Anti-Corruption Helpline
+                                </h2>
+                                <p>Anti-Corruption</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    106
+                                </h2>
+                                <button class="btn btn-active rounded-full">Govt.</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-card flex gap-4">
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/emergency.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Electricity Helpline
+                                </h2>
+                                <p>Electricity Outage</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    16216
+                                </h2>
+                                <button class="btn btn-active rounded-full">Electricity</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/brac.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Brac Helpline
+                                </h2>
+                                <p>Brac</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    16445
+                                </h2>
+                                <button class="btn btn-active rounded-full">NGO</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card bg-base-100 w-[300px] h-[320px] shadow-md p-8 space-y-2">
+                            <div class="flex justify-between items-center">
+                                <div
+                                    class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-2xl flex justify-center items-center">
+                                    <img class="w-[32px] h-[32px]" src="./assets/Bangladesh-Railway.png" alt="Shoes" />
+                                </div>
+                                <div><i class="fa-regular fa-heart"></i></div>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    Bangladesh Railway Helpline
+                                </h2>
+                                <p>Bangladesh Railway</p>
+                            </div>
+                            <div class="">
+                                <h2 class="card-title">
+                                    163
+                                </h2>
+                                <button class="btn btn-active rounded-full">Travel</button>
+                            </div>
+                            <div class="flex justify-between gap-2 mt-3">
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-red-400"><span><i
+                                            class="fa-regular fa-copy"></i></span>Copy</button>
+                                <button class="w-1/2 px-4 py-2 rounded-lg  bg-[#00a63e]"><span><i
+                                            class="fa-solid fa-phone"></i></span>Call</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <aside class="contact-history-grid col-span-3">
+                <h1>right grid</h1>
+            </aside>
+        </section>
+    </main>
 
 
 
